--- a/app.json
+++ b/app.json
@@ -20,7 +20,8 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.jhon_steven_23.DeficienciasVialesJhonn"
+      "package": "com.jhon_steven_23.DeficienciasVialesJhonn",
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "output": "static",
@@ -39,7 +40,8 @@
             "backgroundColor": "#000000"
           }
         }
-      ]
+      ],
+      "@react-native-google-signin/google-signin" 
     ],
     "experiments": {
       "typedRoutes": true,
