--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-location": "~19.0.7",
+    "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.11",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -39,9 +40,11 @@
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
+    "react-native-pager-view": "6.9.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-tab-view": "^4.2.0",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1"
