[Change] arreglos para notificaciones y cambio de nombre de la app

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Proyecto-Deficiencias-Viales",
+    "name": "Deficiencias Viales",
     "slug": "Proyecto-Deficiencias-Viales",
     "version": "1.0.0",
     "orientation": "portrait",
