--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.13",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.9",
@@ -41,6 +42,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-calendars": "^1.1313.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
     "react-native-pager-view": "6.9.1",
@@ -48,6 +51,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.1",
     "react-native-tab-view": "^4.2.0",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.21.0",
